force-app/main/default/objects/Business_Project__c/Business_Project__c.object-meta.xml
<CustomObject>
    <description>This object will track initiatives that came as a result of one or more Merchant Feedbacks.</description>
    <label>Business Project</label>
    <nameField>
        <label>Name of the Project</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>