force-app/main/default/objects/Business_Project__c/fields/Date_of_last_merchant_feedback__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_merchant_feedback__c</fullName>
    <label>Date of last merchant feedback</label>
    <summarizedField>Merchant_Feedback__c.CreatedDate</summarizedField>
    <summaryForeignKey>Merchant_Feedback__c.Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>