force-app/main/default/objects/Business_Project__c/fields/Impacted_KPIs__c.field-meta.xml
<CustomField>
    <fullName>Impacted_KPIs__c</fullName>
    <label>Impacted KPIs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Issue_KPI</valueSetName>
    </valueSet>
</CustomField>