force-app/main/default/objects/Business_Project__c/fields/Link_to_the_project__c.field-meta.xml
<CustomField>
    <fullName>Link_to_the_project__c</fullName>
    <description>Please add the URL link to confluence or JIRA.</description>
    <inlineHelpText>Please add the URL link to confluence or JIRA.</inlineHelpText>
    <label>Link to the project</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>