force-app/main/default/objects/Business_Project__c/fields/Nature_of_resolution__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_resolution__c</fullName>
    <label>Resolution Details</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>