force-app/main/default/objects/Business_Project__c/fields/Nature_of_work_required__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_work_required__c</fullName>
    <label>Nature of work required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Process Optimization</fullName>
            </value>
            <value>
                <fullName>Third-party evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>