force-app/main/default/objects/Business_Project__c/fields/Number_of_merchant_feedback__c.field-meta.xml
<CustomField>
    <fullName>Number_of_merchant_feedback__c</fullName>
    <label>Number of merchant feedback</label>
    <summaryForeignKey>Merchant_Feedback__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>