force-app/main/default/objects/Business_Project__c/fields/Project_Details__c.field-meta.xml
<CustomField>
    <fullName>Project_Details__c</fullName>
    <inlineHelpText>Please provide detailed information.</inlineHelpText>
    <label>Project Details</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>