force-app/main/default/objects/Business_Project__c/fields/Resolution_Details__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Details__c</fullName>
    <label>Resolution Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>