force-app/main/default/objects/Business_Project__c/fields/Roadmap_Status__c.field-meta.xml
<CustomField>
    <fullName>Roadmap_Status__c</fullName>
    <label>Roadmap Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q3 2020</fullName>
            </value>
            <value>
                <fullName>Q4 2020</fullName>
            </value>
            <value>
                <fullName>Q1 2021</fullName>
            </value>
            <value>
                <fullName>Q2 2021</fullName>
            </value>
            <value>
                <fullName>Q3 2021</fullName>
            </value>
            <value>
                <fullName>Q4 2021</fullName>
            </value>
            <value>
                <fullName>Q1 2022</fullName>
            </value>
            <value>
                <fullName>Q2 2022</fullName>
            </value>
            <value>
                <fullName>Q3 2022</fullName>
            </value>
            <value>
                <fullName>Q4 2022</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>