force-app/main/default/objects/Business_Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Execution in Progress</fullName>
                <isActive>false</isActive>
                <label>Execution in Progress</label>
            </value>
            <value>
                <fullName>Initiation</fullName>
                <isActive>false</isActive>
                <label>Initiation</label>
            </value>
            <value>
                <fullName>Performance Testing/Monitoring</fullName>
                <isActive>false</isActive>
                <label>Performance Testing/Monitoring</label>
            </value>
            <value>
                <fullName>Planning</fullName>
                <isActive>false</isActive>
                <label>Planning</label>
            </value>
            <value>
                <fullName>Pre-conception</fullName>
                <isActive>false</isActive>
                <label>Pre-conception</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>