force-app/main/default/objects/Business_Project__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Feedback_Subcategory</valueSetName>
    </valueSet>
</CustomField>