force-app/main/default/objects/Business_Project__c/fields/T_shirt_sizing__c.field-meta.xml
<CustomField>
    <fullName>T_shirt_sizing__c</fullName>
    <label>T-shirt sizing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>