force-app/main/default/objects/Business_Project__c/fields/Teams_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Teams_Impacted__c</fullName>
    <label>Teams Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOT - Backbox</fullName>
            </value>
            <value>
                <fullName>BOT - Bucks &amp; Shipping</fullName>
            </value>
            <value>
                <fullName>BOT- CSAT</fullName>
            </value>
            <value>
                <fullName>BOT - DATA</fullName>
            </value>
            <value>
                <fullName>BOT - Devops/Secops/Sysadmin</fullName>
            </value>
            <value>
                <fullName>BOT - Growth &amp; Love</fullName>
            </value>
            <value>
                <fullName>BOT - MCC</fullName>
            </value>
            <value>
                <fullName>BOT - Mobile</fullName>
            </value>
            <value>
                <fullName>BOT - Nav &amp; Search</fullName>
            </value>
            <value>
                <fullName>BOT - PIM</fullName>
            </value>
            <value>
                <fullName>BOT - PRO SERVICES</fullName>
            </value>
            <value>
                <fullName>BOT - Security Management</fullName>
            </value>
            <value>
                <fullName>BRAND - Art &amp; Communication</fullName>
            </value>
            <value>
                <fullName>BRAND - Culture &amp; Office</fullName>
            </value>
            <value>
                <fullName>Classic/B2S/BackWatch</fullName>
            </value>
            <value>
                <fullName>Country/Category Development</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>MARKETING - Acquisition</fullName>
            </value>
            <value>
                <fullName>MARKETING - Analytics &amp; Insights</fullName>
            </value>
            <value>
                <fullName>MARKETING - Content</fullName>
            </value>
            <value>
                <fullName>MARKETING - Conversion</fullName>
            </value>
            <value>
                <fullName>MARKETING - CRM &amp; PRM</fullName>
            </value>
            <value>
                <fullName>MARKETING  - R&amp;D</fullName>
            </value>
            <value>
                <fullName>MARKETING - SEO</fullName>
            </value>
            <value>
                <fullName>OPS - Asia Development</fullName>
            </value>
            <value>
                <fullName>OPS - Back Market 4 Business</fullName>
            </value>
            <value>
                <fullName>OPS - BI</fullName>
            </value>
            <value>
                <fullName>OPS - Global Supply</fullName>
            </value>
            <value>
                <fullName>OPS - Logistics/BuyBack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>