force-app/main/default/objects/Business_Project__c/recordTypes/New_Project.recordType-meta.xml
<RecordType>
    <fullName>New_Project</fullName>
    <active>true</active>
    <label>New Project</label>
</RecordType>