force-app/main/default/objects/Business_Project__c/listViews/All_feedbacks.listView-meta.xml
<ListView>
    <fullName>All_feedbacks</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Subcategory__c</columns>
    <columns>Stage__c</columns>
    <columns>Link_to_the_project__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Business Projects</label>
</ListView>